correctly adds multiple books to screen

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <input type="number" name="numberOfPages" id="numberOfPages">
       </div>
       <div>
+        <label for="read">Have You Read This Before?</label>
+        <input type="checkbox" name = "read" value = "hasRead" id = "read">
+      </div>
+      <div>
         <button id ="confirmBtn" value="default">Confirm</button>
       </div>
     </form>
